<resources>
    <string name="app_name">KF Care</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="attach">แนบไฟล์</string>
    <string name="take_photo">ถ่ายรูป</string>
    <string name="get_picture">เลือกรูป</string>
    <string name="language">TH/EN</string>
    <string name="language_alert_title">TH/EN</string>
    <string name="language_thai">ภาษาไทย</string>
    <string name="language_english">English</string>
    <string name="kf_care">Knight Frank Care</string>
    <string name="welcome">ยินดีต้อนรับ</string>
    <string name="splash_info">กรุณาขอ Invitation Code จากนิติบุคคลเพื่อสมัครใช้บริการ</string>
    <string name="splash_register_by_email">สมัครด้วย Email</string>
    <string name="splash_have_account">เคยสมัครแล้ว</string>
    <string name="splash_click_to_login">กดเข้าสู่ระบบ</string>
    <string name="invitation_code">Invitation Code</string>
    <string name="invitation_code_button_submit">ยืนยัน</string>
    <string name="invitation_code_button_cancel">ยกเลิก</string>
    <string name="register_alert_building">ไม่พบข้อมูลอาคาร</string>
    <string name="register_alert_floor">ไม่พบข้อมูลชั้น</string>
    <string name="register_alert_room">ไม่มีข้อมูลห้อง</string>
    <string name="error_alert_floor">กรุณาเลือกชั้น</string>
    <string name="error_alert_room">กรุณาเลือกห้อง</string>
    <string name="register_toolbar_name">ลงทะเบียน</string>
    <string name="register_title_project_name">โครงการ</string>
    <string name="register_title_building_name">ตึก</string>
    <string name="register_title_floor_name">ชั้น</string>
    <string name="register_title_room_no">ห้อง</string>
    <string name="register_title_user_first_name">ชื่อ</string>
    <string name="register_title_user_last_name">นามสกุล</string>
    <string name="register_title_tel_no">เบอร์ติดต่อ</string>
    <string name="register_title_email">อีเมล</string>
    <string name="register_title_password">ตั้งรหัสผ่าน</string>
    <string name="register_title_confirm_password">ยืนยันรหัสผ่าน</string>
    <string name="register_button_register_submit">สมัครสมาชิก</string>
    <string name="register_button_register_cancel">ยกเลิก</string>
    <string name="register_success">ลงทะเบียนเรียบร้อย กรุณารอการยืนยันจากทางนิติบุคคล</string>
    <string name="register_i_agrees_and_accept">ข้าพเจ้าเห็นด้วยและยอมรับเงื่อนไข ข้อตกลง</string>
    <string name="back">กลับ</string>
    <string name="email_login_password">รหัสผ่าน</string>
    <string name="email_login_button_login">เข้าสู่ระบบ</string>
    <string name="login_register">สมัครสมาชิก</string>
    <string name="error_require_invitation_code">กรุณากรอก Invitation Code</string>
    <string name="error_require_email">กรุณากรอก Email</string>
    <string name="error_require_username">กรุณากรอก Username</string>
    <string name="error_require_password">กรุณากรอก Password</string>
    <string name="error_require_password_size">กรุณากรอก Password ให้มากกว่า 5 ตัวอักษร</string>
    <string name="error_require_confirmed_password">กรุณากรอก Confirm Password ให้ตรงกับ Password</string>
    <string name="error_require_first_name">กรุณากรอก ชื่อ</string>
    <string name="error_require_last_name">กรุณากรอก นามสกุล</string>
    <string name="error_require_tel_no">กรุณากรอก เบอร์โทรติดต่อ</string>
    <string name="navigation_drawer_welcome">สวัสดีค่ะคุณ</string>
    <string name="navigation_drawer_dashboard">Dashboard</string>
    <string name="navigation_drawer_contact_us">ติดต่อสอบถาม</string>
    <string name="navigation_drawer_job_status">สถานะงานซ่อม</string>
    <string name="navigation_drawer_profile">โปรไฟล์ของคุณ</string>
    <string name="navigation_drawer_kf_care">Knight Frank Care</string>
    <string name="navigation_drawer_parcels">พัสดุ</string>
    <string name="navigation_drawer_billings">แจ้งหนี้</string>
    <string name="navigation_drawer_announcements">ประกาศ</string>
    <string name="navigation_drawer_job_request">แจ้งซ่อม</string>
    <string name="navigation_drawer_contact">ติดต่อ</string>
    <string name="navigation_drawer_work_order">แจ้งซ่อม</string>
    <string name="navigation_drawer_settings">ตั้งค่าระบบ</string>
    <string name="navigation_drawer_logout">ออกจากระบบ</string>
    <string name="navigation_drawer_create_job_request">แจ้งงานซ่อม</string>
    <string name="navigation_drawer_create_message">ติดต่อสอบถาม</string>
    <string name="logout_confirm_title">คุณต้องการจะออกจากระบบหรือไม่</string>
    <string name="logout_confirm_accept">ออกจากระบบ</string>
    <string name="logout_confirm_cancel">ยกเลิก</string>
    <string name="dashboard_card_type_all_title">ทั้งหมด</string>
    <string name="dashboard_card_type_parcels_title">พัสดุ</string>
    <string name="dashboard_card_type_announcement_title">ประกาศ</string>
    <string name="dashboard_card_type_job_request_title">งานซ่อม</string>
    <string name="dashboard_card_type_billing_title">ค่าสาธารณูปโภค</string>
    <string name="dashboard_card_type_message_title">ข้อความ</string>
    <string name="dashboard_card_type_message_item_num_rows">%1$s รายการ</string>
    <string name="change_room">เปลี่ยนห้อง</string>
    <string name="profile_title">โปรไฟล์ของคุณ</string>
    <string name="profile_about_you">เกี่ยวกับคุณ</string>
    <string name="profile_notification_setting">ตั้งค่าเตือน</string>
    <string name="profile_name">ชื่อ %1$s %2$s</string>
    <string name="profile_room">ห้อง %1$s</string>
    <string name="profile_tel_no">เบอร์ติดต่อ %1$s</string>
    <string name="profile_line_id">LINE ID : %1$s</string>
    <string name="profile_email">Email : %1$s</string>
    <string name="profile_car_parking">ช่องจอดรถ %1$s</string>
    <string name="profile_btn_edit_profile">แก้ไขข้อมูลส่วนตัว</string>
    <string name="profile_noti_setting_desc">นิติสามารถติดต่อได้ทาง</string>
    <string name="profile_edit_line_id">LINE ID</string>
    <string name="profile_edit_car_parking">ช่องจอดรถ</string>
    <string name="profile_edit_car_plate">ทะเบียน</string>
    <string name="profile_edit_dialog_content">แก้ไขข้อมูล เรียบร้อย</string>
    <string name="profile_edit_dialog_accept">ตกลง</string>
    <string name="profile_edit_noti_setting_desc">ต้องการให้นิติติดต่อทาง</string>
    <string name="profile_edit_noti_btn_line">LINE</string>
    <string name="profile_edit_noti_btn_mobile">มือถือ</string>
    <string name="profile_edit_noti_btn_save">บันทึกการแก้ไข</string>
    <string name="announcement_title">ประกาศ</string>
    <string name="announcement_between_date">%1$s - %2$s</string>
    <string name="announcement_detail_title">รายละเอียดการประชุม</string>
    <string name="announcement_button_accepted">เข้าร่วม</string>
    <string name="announcement_button_not_accepted">ไม่เข้าร่วม</string>
    <string name="announcement_text_accepted">เข้าร่วม</string>
    <string name="announcement_text_not_accepted">ไม่เข้าร่วม</string>
    <string name="announcement_text_waiting_accepted">รอตอบรับ</string>
    <string name="announcement_create_toolbar_title">กรุณากรอกข้อมูลประกาศ</string>
    <string name="announcement_create">สร้างประกาศใหม่</string>
    <string name="announcement_create_title">เรื่อง</string>
    <string name="announcement_create_start_date">ตั้งแต่</string>
    <string name="announcement_create_end_date">ถึง</string>
    <string name="announcement_create_location">สถานที่</string>
    <string name="announcement_create_detail">รายละเอียด</string>
    <string name="announcement_create_require_accept">การตอบรับ</string>
    <string name="announcement_create_require_accept_default">--กรุณาเลือก--</string>
    <string name="announcement_create_require_accept_accept">ตอบรับ</string>
    <string name="announcement_create_require_accept_not_accept">ไม่ตอบรับ</string>
    <string name="announcement_create_submit">สร้างประกาศ</string>
    <string name="announcement_create_success_dialog">สร้างประกาศสำเร็จแล้ว</string>
    <string name="announcement_create_is_publish">การเผยแพร่</string>
    <string name="announcement_create_is_publish_publish">เผยแพร่</string>
    <string name="announcement_create_is_publish_not_publish">ไม่เผยแพร่</string>
    <string name="announcement_create_public_send">ส่งให้ลูกบ้านทุกท่าน</string>
    <string name="announcement_create_private_send">เลือกส่งให้บางท่าน</string>
    <string name="or">หรือ</string>
    <string name="announcement_create_public_send_confirm">กดยืนยันเพื่อส่งข้อความให้ลูกบ้านทุกท่าน</string>
    <string name="confirm">ยืนยัน</string>
    <string name="cancel">ยกเลิก</string>
    <string name="announcement_create_dialog_title">สร้างประกาศ</string>
    <string name="announcement_create_dialog_content">สร้างประกาศ เรียบร้อย</string>
    <string name="announcement_create_dialog_accept">ตกลง</string>
    <string name="announcement_edit_toolbar_title">แก้ไขประกาศ</string>
    <string name="announcement_edit_submit_btn">แก้ไข</string>
    <string name="announcement_edit_dialog_title">แก้ไขประกาศ</string>
    <string name="announcement_edit_dialog_content">แก้ไขประกาศ เรียบร้อย</string>
    <string name="announcement_edit_dialog_accept">ตกลง</string>
    <string name="person_search_toolbar_title">ค้นหาลูกบ้าน</string>
    <string name="person_search_search_by_name">ค้นหาจากชื่อของลูกบ้าน</string>
    <string name="job_request_create_toolbar_title">กรุณากรอกข้อมูลแจ้งซ่อม</string>
    <string name="job_request_create_job_title">แจ้งซ่อมเรื่อง</string>
    <string name="job_request_create_job_detail">รายละเอียด</string>
    <string name="job_request_create_contact_name">ชื่อผู้ติดต่อ</string>
    <string name="job_request_create_contact_tel_no">เบอร์ติดต่อ</string>
    <string name="job_request_create_contact_room_no">เลขห้อง</string>
    <string name="job_request_create_send_button">ส่งเรื่องแจ้งซ่อม</string>
    <string name="job_request_create_send_success_message_dialog">แจ้งซ่อมเรียบร้อย ขั้นตอนต่อไป นิติจะโทรติดต่อท่าน เพื่อทำการนัดหมายเวลา</string>
    <string name="job_request_create_send_success_message_dialog_accept">ตกลง</string>
    <string name="job_request_create_appointment_date">วันนัดหมาย</string>
    <string name="date">วันที่</string>
    <string name="time">เวลา</string>
    <string name="job_request_create_priority">ความสำคัญ</string>
    <string name="job_request_create_priority_spinner_default">กรุณาเลือก ความสำคัญ</string>
    <string name="job_request_create_area">ประเภทงาน</string>
    <string name="job_request_create_area_spinner_default">กรุณาเลือก ประเภทงาน</string>
    <string name="job_request_create_system">ระบบงาน</string>
    <string name="job_request_create_system_spinner_default">กรุณาเลือก ระบบงาน</string>
    <string name="job_request_create_status">สถานะ</string>
    <string name="job_request_create_status_spinner_default">กรุณาเลือก สถานะ</string>
    <string name="job_request_list_toolbar_title">แจ้งซ่อม</string>
    <string name="job_request_list_toolbar_tab_waiting_approve">Waiting Approve</string>
    <string name="job_request_list_toolbar_tab_all">All</string>
    <string name="job_request_detail_title">ซ่อมบำรุง</string>
    <string name="job_request_detail_toolbar_tab_detail">รายละเอียด</string>
    <string name="job_request_detail_toolbar_tab_status">สถานะ</string>
    <string name="job_request_detail_toolbar_tab_report">ผู้รับผิดชอบ</string>
    <string name="search">ค้นหา</string>
    <string name="billing_room_list">รายการห้องพักเพื่อจดมิเตอร์น้ำ</string>
    <string name="building">อาคาร</string>
    <string name="building_spinner_default">กรุณาเลือก อาคาร</string>
    <string name="floor">ชั้น</string>
    <string name="floor_spinner_default">กรุณาเลือก ชั้น</string>
    <string name="settings_language_title">เลือกภาษา</string>
    <string name="settings_language_option_default">Default (Auto)</string>
    <string name="settings_language_option_th">ไทย</string>
    <string name="settings_language_option_en">English</string>
    <string name="settings_submit_btn">ยืนยันการตั้งค่า</string>
</resources>