<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".customer.screens.profile.ProfileInfoFragment">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_margin="20dp">

            <TextView
                android:id="@+id/text_view_profile_room_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile_room"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textAlignment="center"
                android:layout_marginBottom="10dp" />

            <com.facebook.drawee.view.SimpleDraweeView
                android:id="@+id/image_view_profile"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_margin="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                fresco:placeholderImage="@drawable/ic_user_red"
                fresco:roundAsCircle="true"
                android:layout_gravity="center_horizontal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/text_view_profile_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="6dp"
                        android:text="@string/profile_name"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/text_view_tel_no"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="6dp"
                        android:text="@string/profile_tel_no"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/text_view_line_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="6dp"
                        android:text="@string/profile_line_id"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/text_view_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="6dp"
                        android:text="@string/profile_email"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/text_view_car_parking"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="6dp"
                        android:text="@string/profile_car_parking"
                        android:textColor="@color/black"
                        android:textSize="18sp" />
                </LinearLayout>

            </LinearLayout>

            <View
                style="@style/Separator.Grey"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp" />

            <Button
                android:id="@+id/button_edit_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile_btn_edit_profile"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:background="@drawable/shape_button_round_corner_red_bg_red"
                android:visibility="visible" />


        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>