<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".technician.screens.billing.getwaterbillingjobdetail.WaterBillingJobDetailActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_main"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/card_billing_bg">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/toolbar_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:gravity="center"
                    android:text="@string/billing_room_list"
                    android:textColor="@color/white"
                    android:textSize="18dp"
                    android:layout_toLeftOf="@+id/toolbar_add"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/toolbar_add"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_message_add_white"
                    android:layout_alignParentEnd="true"
                    android:gravity="center"
                    android:layout_centerVertical="true"
                    android:padding="16dp"
                    android:visibility="invisible" />

            </RelativeLayout>

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/layout_loading_overlay" />

    <LinearLayout
        android:id="@+id/linear_layout_search_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/text_view_billing_index"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4"
            android:layout_marginBottom="12dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="@string/building"
                android:layout_weight="1" />

            <th.co.knightfrank.kf_care_android.customer.ui.views.spinner.SpinnerDialog
                android:id="@+id/spinner_building"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                app:dialog_confirm="@string/confirm"
                app:dialog_title="@string/building_spinner_default" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4"
            android:layout_marginBottom="12dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="@string/floor"
                android:layout_weight="1" />

            <th.co.knightfrank.kf_care_android.customer.ui.views.spinner.SpinnerDialog
                android:id="@+id/spinner_floor"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                app:dialog_confirm="@string/confirm"
                app:dialog_title="@string/floor_spinner_default" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1"
            android:visibility="visible"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

            <Button
                android:id="@+id/btn_search"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/search"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:background="@drawable/shape_button_round_corner_red_bg_red" />
        </LinearLayout>

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view_billing_job_detail_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:background="@color/background_grey"
        android:orientation="vertical"
        app:layoutManager="android.support.v7.widget.LinearLayoutManager"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

</LinearLayout>