<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".customer.screens.settings.SettingsActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/kf_red"
            app:layout_collapseMode="pin">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/navigation_drawer_settings"
                    android:gravity="center"
                    android:textSize="18dp"
                    android:textColor="@color/white"
                    android:layout_centerInParent="true" />
            </RelativeLayout>

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/layout_loading_overlay" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <LinearLayout
                android:id="@+id/linear_layout_project_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_view_project_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:text="@string/settings_language_title" />

                <RadioGroup
                    android:id="@+id/radio_group_language"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <RadioButton
                        android:id="@+id/radio_btn_language_default"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/settings_language_option_default"
                        android:checked="true"
                        android:textSize="16sp"
                        android:textColor="@color/black" />

                    <RadioButton
                        android:id="@+id/radio_btn_language_th"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/settings_language_option_th"
                        android:textSize="16sp"
                        android:textColor="@color/black" />

                    <RadioButton
                        android:id="@+id/radio_btn_language_en"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/settings_language_option_en"
                        android:textSize="16sp"
                        android:textColor="@color/black" />
                </RadioGroup>
            </LinearLayout>

            <View
                style="@style/Separator.Grey"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp" />

            <LinearLayout
                android:id="@+id/linear_layout_settings_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1"
                android:visibility="visible"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="40dp">

                <Button
                    android:id="@+id/btn_settings_submit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_submit_btn"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:background="@drawable/shape_button_round_corner_red_bg_red" />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</LinearLayout>
