<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_margin="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile_noti_setting_desc"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textAlignment="center"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="40dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_marginBottom="20dp">

                <Button
                    android:id="@+id/btn_is_line"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_edit_noti_btn_line"
                    android:textColor="@color/kf_red"
                    android:textSize="20sp"
                    android:background="@drawable/shape_button_round_corner_red_bg_white"
                    android:visibility="visible"
                    android:layout_weight="1"
                    android:layout_margin="10dp" />

                <Button
                    android:id="@+id/btn_is_mobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_edit_noti_btn_mobile"
                    android:textColor="@color/kf_red"
                    android:textSize="20sp"
                    android:background="@drawable/shape_button_round_corner_red_bg_white"
                    android:visibility="visible"
                    android:layout_weight="1"
                    android:layout_margin="10dp" />

            </LinearLayout>

            <View
                style="@style/Separator.Grey"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp" />

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>